fix overflow for search form fields

--- a/client/src/components/Search.css
+++ b/client/src/components/Search.css
@@ -1,5 +1,6 @@
 :local(.row) {
     composes: flexAlignBottom from './Layout.css';
+    flex-wrap: wrap;
 }
 
 :local(.ctas) {
